--- a/LMC3403Assignment2.html
+++ b/LMC3403Assignment2.html
@@ -1,71 +1,191 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Interactive Guide: Git & GitHub Basics</title>
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet" />
+  <!-- Simple CSS Reset and Custom Styles -->
   <style>
-    body {font-family: Arial, sans-serif; line-height:1.6; background-color:#f4f4f9; padding:30px; max-width:700px; margin:auto;}
-    h2 {color:#0366d6;}
-    a {color:#0366d6; text-decoration:none;}
-    pre {background:#eee;padding:10px;border-radius:5px;}
-    iframe {border-radius:10px; width:100%; height:315px; margin-bottom:20px;}
-    .quiz {padding:15px; background:#fff; border-radius:8px;}
+    * { box-sizing: border-box; margin: 0; padding: 0; }
+    body {
+      font-family: 'Roboto', sans-serif;
+      line-height: 1.6;
+      background: url('https://images.unsplash.com/photo-1517430816045-df4b7de011fb?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80') no-repeat center center fixed;
+      background-size: cover;
+      color: #333;
+      padding: 20px;
+    }
+    .container {
+      background-color: rgba(255, 255, 255, 0.95);
+      padding: 30px;
+      max-width: 800px;
+      margin: 30px auto;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    }
+    header {
+      text-align: center;
+      margin-bottom: 30px;
+    }
+    header h1 {
+      color: #0366d6;
+      margin-bottom: 10px;
+    }
+    nav {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+    nav a {
+      margin: 0 10px;
+      color: #0366d6;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    h2, h3 {
+      color: #0366d6;
+      margin-top: 20px;
+    }
+    pre {
+      background: #f4f4f4;
+      padding: 15px;
+      border-radius: 5px;
+      overflow-x: auto;
+    }
+    iframe {
+      border-radius: 10px;
+      width: 100%;
+      height: 315px;
+      margin: 20px 0;
+    }
+    .quiz {
+      background: #eef7ff;
+      border: 1px solid #cce4ff;
+      border-radius: 8px;
+      padding: 20px;
+      margin: 20px 0;
+    }
+    .quiz ol {
+      margin-left: 20px;
+    }
+    .resources ul {
+      list-style-type: disc;
+      margin-left: 20px;
+    }
+    footer {
+      text-align: center;
+      margin-top: 30px;
+      font-size: 0.9em;
+      color: #555;
+    }
+    /* Responsive adjustments */
+    @media (max-width: 600px) {
+      body { padding: 10px; }
+      .container { padding: 20px; }
+    }
   </style>
 </head>
 <body>
+  <div class="container">
+    <header>
+      <h1>🚀 Git & GitHub Interactive Guide</h1>
+      <p>Your step-by-step resource to master Git and GitHub.</p>
+    </header>
 
-<h2>🚀 Git & GitHub Interactive Guide</h2>
+    <nav>
+      <a href="#installing">Installing Git</a>
+      <a href="#configure">Configure Git</a>
+      <a href="#repository">First Repository</a>
+      <a href="#connect">Connect to GitHub</a>
+      <a href="#quiz">Quiz</a>
+      <a href="#resources">Resources</a>
+    </nav>
 
-<h3>Step 1: Installing Git</h3>
-<ol>
-  <li>Download Git from <a href="https://git-scm.com/downloads">git-scm.com</a></li>
-  <li>Install Git (Accept defaults, recommended settings)</li>
-</ol>
+    <section id="installing">
+      <h2>Step 1: Installing Git</h2>
+      <ol>
+        <li>
+          Download Git from 
+          <a href="https://git-scm.com/downloads" target="_blank" rel="noopener noreferrer">git-scm.com</a>
+        </li>
+        <li>Install Git (Accept defaults, recommended settings)</li>
+      </ol>
+      <iframe src="https://www.youtube.com/embed/J_Clau1bYco" allowfullscreen></iframe>
+    </section>
 
-<iframe src="https://www.youtube.com/embed/J_Clau1bYco" allowfullscreen></iframe>
-
-<h3>Step 2: Configure Git</h3>
-<pre>
+    <section id="configure">
+      <h2>Step 2: Configure Git</h2>
+      <pre>
 git config --global user.name "Your Name"
 git config --global user.email "your_email@example.com"
-</pre>
+      </pre>
+      <p>For more details, check out the 
+        <a href="https://git-scm.com/book/en/v2/Getting-Started-First-Time-Git-Setup" target="_blank" rel="noopener noreferrer">
+          Git documentation
+        </a>.
+      </p>
+    </section>
 
-<h3>Step 3: Create your First GitHub Repository</h3>
-<ul>
-  <li>Create an account at <a href="https://github.com">GitHub.com</a>.</li>
-  <li>Click "New Repository" and follow instructions.</li>
-</ul>
+    <section id="repository">
+      <h2>Step 3: Create your First GitHub Repository</h2>
+      <ul>
+        <li>Create an account at 
+          <a href="https://github.com" target="_blank" rel="noopener noreferrer">GitHub.com</a>.
+        </li>
+        <li>Click "New Repository" and follow the on-screen instructions.</li>
+      </ul>
+      <img src="https://user-images.githubusercontent.com/9919/43683135-7b28c582-9844-11e8-9e07-09274ab8f5b4.png" alt="GitHub Repository Example" style="width:100%; border-radius:8px; margin-top:15px;">
+      <iframe src="https://www.youtube.com/embed/hMfi0mv2u7g" allowfullscreen></iframe>
+    </section>
 
-<iframe src="https://www.youtube.com/embed/hMfi0mv2u7g" allowfullscreen></iframe>
-
-<h3>Step 4: Connect Local Project to GitHub</h3>
-<pre>
+    <section id="connect">
+      <h2>Step 4: Connect Local Project to GitHub</h2>
+      <pre>
 git init
 git add .
 git commit -m "First commit"
-git remote add origin &lt;your repo URL&gt;
+git remote add origin &lt;your_repo_URL&gt;
 git push -u origin main
-</pre>
+      </pre>
+    </section>
 
-<h3>🎯 Quick Quiz</h3>
-<div class="quiz">
-  <ol>
-    <li>What command initializes a Git repository?</li>
-    <li>How do you add files to your Git staging area?</li>
-    <li>What's the command to push code to GitHub?</li>
-  </ol>
-  <p><i>Check your answers: git init, git add ., git push</i></p>
-</div>
+    <section id="quiz">
+      <h2>🎯 Quick Quiz</h2>
+      <div class="quiz">
+        <ol>
+          <li>What command initializes a Git repository?</li>
+          <li>How do you add files to your Git staging area?</li>
+          <li>What's the command to push code to GitHub?</li>
+        </ol>
+        <p><i>Check your answers: git init, git add ., git push</i></p>
+      </div>
+    </section>
 
-<h3>📚 Extra Resources</h3>
-<ul>
-  <li><a href="https://guides.github.com/activities/hello-world/">GitHub Official Tutorial</a></li>
-  <li><a href="https://www.atlassian.com/git/tutorials">Atlassian Git Tutorial</a></li>
-</ul>
+    <section id="resources" class="resources">
+      <h2>📚 Extra Resources</h2>
+      <ul>
+        <li>
+          <a href="https://guides.github.com/activities/hello-world/" target="_blank" rel="noopener noreferrer">
+            GitHub Official Tutorial
+          </a>
+        </li>
+        <li>
+          <a href="https://www.atlassian.com/git/tutorials" target="_blank" rel="noopener noreferrer">
+            Atlassian Git Tutorial
+          </a>
+        </li>
+        <li>
+          <a href="https://git-scm.com/book/en/v2" target="_blank" rel="noopener noreferrer">
+            Pro Git Book
+          </a>
+        </li>
+      </ul>
+    </section>
 
-<h3>🎉 Congratulations!</h3>
-<p>You've successfully learned Git & GitHub basics!</p>
-
+    <footer>
+      <p>© 2025 Git & GitHub Guide. All rights reserved.</p>
+    </footer>
+  </div>
 </body>
 </html>
