--- a/LMC3403Assignment2.html
+++ b/LMC3403Assignment2.html
@@ -4,9 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Interactive Guide: Git & GitHub Basics</title>
-  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet" />
-  <!-- Simple CSS Reset and Custom Styles -->
   <style>
     * { box-sizing: border-box; margin: 0; padding: 0; }
     body {
@@ -20,44 +18,45 @@
     .container {
       background-color: rgba(255, 255, 255, 0.95);
       padding: 30px;
-      max-width: 800px;
+      max-width: 900px;
       margin: 30px auto;
       border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      box-shadow: 0 4px 12px rgba(0,0,0,0.15);
     }
     header {
       text-align: center;
       margin-bottom: 30px;
     }
-    header h1 {
-      color: #0366d6;
-      margin-bottom: 10px;
-    }
+    header h1 { color: #0366d6; margin-bottom: 10px; }
     nav {
       text-align: center;
       margin-bottom: 20px;
+      background: #f8f9fa;
+      padding: 10px;
+      border-radius: 5px;
     }
     nav a {
-      margin: 0 10px;
+      margin: 0 15px;
       color: #0366d6;
       text-decoration: none;
       font-weight: bold;
+      transition: color 0.3s;
     }
-    h2, h3 {
-      color: #0366d6;
-      margin-top: 20px;
-    }
+    nav a:hover { color: #004085; }
+    h2, h3 { color: #0366d6; margin: 20px 0 10px; }
     pre {
       background: #f4f4f4;
       padding: 15px;
       border-radius: 5px;
       overflow-x: auto;
+      font-size: 0.95em;
     }
     iframe {
       border-radius: 10px;
       width: 100%;
       height: 315px;
       margin: 20px 0;
+      border: none;
     }
     .quiz {
       background: #eef7ff;
@@ -66,23 +65,42 @@
       padding: 20px;
       margin: 20px 0;
     }
-    .quiz ol {
-      margin-left: 20px;
+    .quiz ol { margin-left: 20px; }
+    .quiz button {
+      background: #0366d6;
+      color: white;
+      border: none;
+      padding: 8px 15px;
+      border-radius: 5px;
+      cursor: pointer;
     }
-    .resources ul {
-      list-style-type: disc;
-      margin-left: 20px;
+    .quiz button:hover { background: #004085; }
+    .resources ul { list-style-type: disc; margin-left: 20px; }
+    footer { text-align: center; margin-top: 30px; font-size: 0.9em; color: #555; }
+    .progress-bar {
+      width: 100%;
+      background: #e9ecef;
+      height: 10px;
+      border-radius: 5px;
+      margin-bottom: 20px;
     }
-    footer {
-      text-align: center;
-      margin-top: 30px;
-      font-size: 0.9em;
-      color: #555;
+    .progress { height: 100%; background: #0366d6; width: 0; border-radius: 5px; transition: width 0.3s; }
+    .collapsible {
+      background: #0366d6;
+      color: white;
+      cursor: pointer;
+      padding: 10px;
+      border: none;
+      width: 100%;
+      text-align: left;
+      border-radius: 5px;
+      margin: 10px 0;
     }
-    /* Responsive adjustments */
+    .content { display: none; padding: 15px; }
     @media (max-width: 600px) {
       body { padding: 10px; }
-      .container { padding: 20px; }
+      .container { padding: 20px; max-width: 100%; }
+      nav a { display: block; margin: 10px 0; }
     }
   </style>
 </head>
@@ -90,7 +108,8 @@
   <div class="container">
     <header>
       <h1>🚀 Git & GitHub Interactive Guide</h1>
-      <p>Your step-by-step resource to master Git and GitHub.</p>
+      <p>Learn the basics of version control in ~1 hour!</p>
+      <div class="progress-bar"><div class="progress" id="progress"></div></div>
     </header>
 
     <nav>
@@ -103,89 +122,94 @@
     </nav>
 
     <section id="installing">
-      <h2>Step 1: Installing Git</h2>
+      <h2>Step 1: Installing Git (~10 min)</h2>
+      <p>Let's get Git on your machine!</p>
       <ol>
-        <li>
-          Download Git from 
-          <a href="https://git-scm.com/downloads" target="_blank" rel="noopener noreferrer">git-scm.com</a>
-        </li>
-        <li>Install Git (Accept defaults, recommended settings)</li>
+        <li>Download Git from <a href="https://git-scm.com/downloads" target="_blank" rel="noopener noreferrer">git-scm.com</a>.</li>
+        <li>Run the installer and accept the default settings.</li>
       </ol>
-      <iframe src="https://www.youtube.com/embed/J_Clau1bYco" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/J_Clau1bYco" title="Git Installation Tutorial" allowfullscreen></iframe>
     </section>
 
     <section id="configure">
-      <h2>Step 2: Configure Git</h2>
+      <h2>Step 2: Configure Git (~10 min)</h2>
+      <p>Set up your identity for Git commits.</p>
       <pre>
 git config --global user.name "Your Name"
 git config --global user.email "your_email@example.com"
       </pre>
-      <p>For more details, check out the 
-        <a href="https://git-scm.com/book/en/v2/Getting-Started-First-Time-Git-Setup" target="_blank" rel="noopener noreferrer">
-          Git documentation
-        </a>.
-      </p>
+      <button class="collapsible">Why configure Git?</button>
+      <div class="content">
+        <p>Configuring Git with your name and email ensures every commit is tagged with your identity, making collaboration easier.</p>
+      </div>
     </section>
 
     <section id="repository">
-      <h2>Step 3: Create your First GitHub Repository</h2>
+      <h2>Step 3: Create Your First Repository (~15 min)</h2>
       <ul>
-        <li>Create an account at 
-          <a href="https://github.com" target="_blank" rel="noopener noreferrer">GitHub.com</a>.
-        </li>
-        <li>Click "New Repository" and follow the on-screen instructions.</li>
+        <li>Sign up at <a href="https://github.com" target="_blank" rel="noopener noreferrer">GitHub.com</a>.</li>
+        <li>Click "New Repository" and name it (e.g., "my-first-repo").</li>
       </ul>
-      <img src="https://user-images.githubusercontent.com/9919/43683135-7b28c582-9844-11e8-9e07-09274ab8f5b4.png" alt="GitHub Repository Example" style="width:100%; border-radius:8px; margin-top:15px;">
-      <iframe src="https://www.youtube.com/embed/hMfi0mv2u7g" allowfullscreen></iframe>
+      <img src="https://user-images.githubusercontent.com/9919/43683135-7b28c582-9844-11e8-9e07-09274ab8f5b4.png" alt="Screenshot of creating a new GitHub repository" style="width:100%; border-radius:8px; margin-top:15px;">
+      <iframe src="https://www.youtube.com/embed/hMfi0mv2u7g" title="Creating a GitHub Repository" allowfullscreen></iframe>
     </section>
 
     <section id="connect">
-      <h2>Step 4: Connect Local Project to GitHub</h2>
+      <h2>Step 4: Connect to GitHub (~15 min)</h2>
+      <p>Link your local project to GitHub.</p>
       <pre>
 git init
 git add .
 git commit -m "First commit"
-git remote add origin &lt;your_repo_URL&gt;
+git remote add origin <your_repo_URL>
 git push -u origin main
       </pre>
+      <p><strong>Tip:</strong> Replace <your_repo_URL> with the URL from your GitHub repo.</p>
     </section>
 
     <section id="quiz">
-      <h2>🎯 Quick Quiz</h2>
+      <h2>🎯 Quick Quiz (~10 min)</h2>
       <div class="quiz">
         <ol>
-          <li>What command initializes a Git repository?</li>
-          <li>How do you add files to your Git staging area?</li>
-          <li>What's the command to push code to GitHub?</li>
+          <li>What command initializes a Git repository? <button onclick="alert('Answer: git init')">Check Answer</button></li>
+          <li>How do you add files to the staging area? <button onclick="alert('Answer: git add .')">Check Answer</button></li>
+          <li>What's the command to push code to GitHub? <button onclick="alert('Answer: git push')">Check Answer</button></li>
         </ol>
-        <p><i>Check your answers: git init, git add ., git push</i></p>
       </div>
     </section>
 
     <section id="resources" class="resources">
       <h2>📚 Extra Resources</h2>
       <ul>
-        <li>
-          <a href="https://guides.github.com/activities/hello-world/" target="_blank" rel="noopener noreferrer">
-            GitHub Official Tutorial
-          </a>
-        </li>
-        <li>
-          <a href="https://www.atlassian.com/git/tutorials" target="_blank" rel="noopener noreferrer">
-            Atlassian Git Tutorial
-          </a>
-        </li>
-        <li>
-          <a href="https://git-scm.com/book/en/v2" target="_blank" rel="noopener noreferrer">
-            Pro Git Book
-          </a>
-        </li>
+        <li><a href="https://guides.github.com/activities/hello-world/" target="_blank" rel="noopener noreferrer">GitHub Hello World Tutorial</a></li>
+        <li><a href="https://www.atlassian.com/git/tutorials" target="_blank" rel="noopener noreferrer">Atlassian Git Tutorials</a></li>
+        <li><a href="https://git-scm.com/book/en/v2" target="_blank" rel="noopener noreferrer">Pro Git Book (Free)</a></li>
       </ul>
     </section>
 
     <footer>
-      <p>© 2025 Git & GitHub Guide. All rights reserved.</p>
+      <p>© 2025 Git & GitHub Guide. Created for [Your Name]'s Assignment.</p>
     </footer>
   </div>
+
+  <script>
+    // Collapsible sections
+    const collapsibles = document.getElementsByClassName("collapsible");
+    for (let i = 0; i < collapsibles.length; i++) {
+      collapsibles[i].addEventListener("click", function() {
+        this.classList.toggle("active");
+        const content = this.nextElementSibling;
+        content.style.display = content.style.display === "block" ? "none" : "block";
+      });
+    }
+
+    // Progress bar (simplified)
+    window.addEventListener("scroll", () => {
+      const winScroll = document.body.scrollTop || document.documentElement.scrollTop;
+      const height = document.documentElement.scrollHeight - document.documentElement.clientHeight;
+      const scrolled = (winScroll / height) * 100;
+      document.getElementById("progress").style.width = scrolled + "%";
+    });
+  </script>
 </body>
 </html>
